sandbox/output
StringCalculator.java:5: error: cannot find symbol
       if(input == null || input.length == 0){ 
                                ^
  symbol:   variable length
  location: variable input of type String
1 error
